--- a/MechanicalWorkShopWebApi.Infrastructure/MechanicalWorkShopWebApi.Infrastructure.csproj
+++ b/MechanicalWorkShopWebApi.Infrastructure/MechanicalWorkShopWebApi.Infrastructure.csproj
@@ -1,18 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="13.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Interfases\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MechanicalWorkShopWebApi.Domain\MechanicalWorkShopWebApi.Domain.csproj" />
   </ItemGroup>
 
 </Project>
