--- a/MechanicalWorkShopWebApi.Api/appsettings.json
+++ b/MechanicalWorkShopWebApi.Api/appsettings.json
@@ -1,3 +1,12 @@
 {
-
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CRUDMechanical;Trusted_Connection=True;Multiple Active Result Sets=true;"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
