--- a/MechanicalWorkShopWebApi.Services/MechanicalWorkShopWebApi.Services.csproj
+++ b/MechanicalWorkShopWebApi.Services/MechanicalWorkShopWebApi.Services.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Implementations\" />
+	  <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MechanicalWorkShopWebApi.Domain\MechanicalWorkShopWebApi.Domain.csproj" />
   </ItemGroup>
 
 </Project>
